crates/pcb-zen-core/tests/snapshots/enum_component_properties__enum_list_property_conversion.snap
---
source: crates/pcb-zen-core/tests/enum_component_properties.rs
assertion_line: 24
expression: output
---
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
        children: [
            FrozenValue(
                Component {
                    name: "U2",
                    footprint: "package://stdlib/kicad-footprints/Resistor_SMD.pretty/R_0402_1005Metric.kicad_mod",
                    prefix: "U",
                    connections: {
                        "IN": FrozenValue(
                            Net {
                                name: "INPUT",
                                id: "<ID>",
                            },
                        ),
                    },
                    properties: {
                        "mixed_list": FrozenValue(
                            ListGen(
                                FrozenList {
                                    content: [
                                        FrozenValue(
                                            EnumValue {
                                                type: EnumType {
                                                    variants: [
                                                        "IDLE",
                                                        "RUNNING",
                                                        "STOPPED",
                                                    ],
                                                },
                                                index: 0,
                                            },
                                        ),
                                        FrozenValue(
                                            "string",
                                        ),
                                        FrozenValue(
                                            123,
                                        ),
                                    ],
                                },
                            ),
                        ),
                        "valid_states": FrozenValue(
                            ListGen(
                                FrozenList {
                                    content: [
                                        FrozenValue(
                                            EnumValue {
                                                type: EnumType {
                                                    variants: [
                                                        "IDLE",
                                                        "RUNNING",
                                                        "STOPPED",
                                                    ],
                                                },
                                                index: 0,
                                            },
                                        ),
                                        FrozenValue(
                                            EnumValue {
                                                type: EnumType {
                                                    variants: [
                                                        "IDLE",
                                                        "RUNNING",
                                                        "STOPPED",
                                                    ],
                                                },
                                                index: 1,
                                            },
                                        ),
                                        FrozenValue(
                                            EnumValue {
                                                type: EnumType {
                                                    variants: [
                                                        "IDLE",
                                                        "RUNNING",
                                                        "STOPPED",
                                                    ],
                                                },
                                                index: 2,
                                            },
                                        ),
                                    ],
                                },
                            ),
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: None,
                            pins: {
                                "1": "IN",
                            },
                        },
                    ),
                },
            ),
        ],
    },
}
[]
