crates/pcb-zen-core/tests/snapshots/enum_component_properties__enum_property_conversion.snap
---
source: crates/pcb-zen-core/tests/enum_component_properties.rs
assertion_line: 4
expression: output
---
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
        children: [
            FrozenValue(
                Component {
                    name: "U1",
                    footprint: "package://stdlib/kicad-footprints/Resistor_SMD.pretty/R_0402_1005Metric.kicad_mod",
                    prefix: "U",
                    connections: {
                        "IN": FrozenValue(
                            Net {
                                name: "INPUT",
                                id: "<ID>",
                            },
                        ),
                        "OUT": FrozenValue(
                            Net {
                                name: "OUTPUT",
                                id: "<ID>",
                            },
                        ),
                    },
                    properties: {
                        "count": FrozenValue(
                            42,
                        ),
                        "logic_level": FrozenValue(
                            EnumValue {
                                type: EnumType {
                                    variants: [
                                        "LOW",
                                        "HIGH",
                                        "TRISTATE",
                                    ],
                                },
                                index: 1,
                            },
                        ),
                        "orientation": FrozenValue(
                            EnumValue {
                                type: EnumType {
                                    variants: [
                                        "NORTH",
                                        "SOUTH",
                                        "EAST",
                                        "WEST",
                                    ],
                                },
                                index: 0,
                            },
                        ),
                        "voltage": FrozenValue(
                            "3.3V",
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: None,
                            pins: {
                                "1": "IN",
                                "2": "OUT",
                            },
                        },
                    ),
                },
            ),
        ],
    },
}
[]
